--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Daniel Marrero",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "knex": "^0.14.6",
     "koa": "^2.5.1",
     "koa-bodyparser": "^4.2.1",
